Bug 1467406 - Remove broken default-fb invalidation path. r=lsalzman a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D13047